--- a/cyclope/templates/admin/change_list.html
+++ b/cyclope/templates/admin/change_list.html
@@ -33,7 +33,7 @@
 {% endif %}{% endif %}
 {% endblock %}
 
-{% block bodyclass %}change-list{% endblock %}
+{% block bodyclass %}change-list {{ app_label }}{% endblock %}
 
 {% if not is_popup %}
   {% block breadcrumbs %}
