--- a/cyclope/apps/articles/templates/articles/article_detail.html
+++ b/cyclope/apps/articles/templates/articles/article_detail.html
@@ -44,15 +44,15 @@ TODO(nicoechaniz): finish adaptation from smarty to django. add trans to text th
   {% endif%}
   <!-- /descripcion -->
 
-  {% if article.images.count %}
-  <div id="gallery">
+  {% if article.pictures %}
+    <div id="gallery">
     <ul>
-      {% for imagedata in article.articleimagedata_set.all %}
+      {% for picture in article.pictures %}
       <li {% if not forloop.first %} style="display:none;" {% endif %}}>
-        <a href="{% version imagedata.image.image.path 'medium' %}"  title="{{ imagedata.label}}">
-          <img src="{% version imagedata.image.image.path 'small' %}" alt="{{ imagedata.label }}" />
+        <a href="{% version picture.image.path 'medium' %}"  title="{{ picture.name }}">
+          <img src="{% version picture.image.path 'small' %}" alt="{{ picture.name }}" />
         </a>
-        <p>{{ imagedata.label }}</p>
+        <p>{{ picture.name }}</p>
       </li>
       {% endfor %}
     </ul>
