--- a/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_teaser.html
@@ -1,4 +1,4 @@
-{% load fb_versions %}
+{% load fb_versions cyclope_utils %}
 
   <div class="media teaser flashmovie">
     <a href="{% url flashmovie-detail flashmovie.slug %}">
@@ -10,5 +10,5 @@
       {% endif %}
 
     </a>
-    <span class="label"><a href="{% url flashmovie-detail flashmovie.slug %}">{{ flashmovie.name }}</a></span>
+    <span class="label"><a href="{% url flashmovie-detail flashmovie.slug %}">{{ flashmovie.name|truncatechars:40 }}</a></span>
   </div>
