--- a/cyclope/apps/medialibrary/templates/medialibrary/movieclip_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/movieclip_teaser.html
@@ -1,4 +1,4 @@
-{% load fb_versions %}
+{% load fb_versions cyclope_utils %}
 
   <div class="media teaser movieclip">
     <a href="{% url movieclip-detail movieclip.slug %}">
@@ -10,5 +10,5 @@
       {% endif %}
 
     </a>
-    <span class="label"><a href="{% url movieclip-detail movieclip.slug %}">{{ movieclip.name }}</a></span>
+    <span class="label"><a href="{% url movieclip-detail movieclip.slug %}">{{ movieclip.name|truncatechars:40 }}</a></span>
   </div>
