--- a/cyclope/media/css/admin_tools_theming.css
+++ b/cyclope/media/css/admin_tools_theming.css
@@ -1,6 +1,6 @@
-/**
+/** 
  * theming styles
- *
+ * 
  */
 
 #header {
@@ -30,14 +30,11 @@ div.breadcrumbs a {
     display: inline;
 }
 
-/* ########## clear django styles ############  */
+/* ########## fonts ############  */
 
 body, .ui-widget {
  font-family: 'Liberation Sans', Arial, sans-serif;
 }
-
-
-
 
 /* ===== misc ======
 
@@ -48,20 +45,21 @@ body, .ui-widget {
  background: url("../images/icon_changelink.png") no-repeat scroll 0 0 transparent;
 }
 
-/* ===== default module styles ===== */
-
-
 /* ========= change list ======== */
 
-.change-list #content, .change-form #content{
+.change-list #content, .change-form #content{ 
 width: 960px;
+}
+
+.popup #content{
+width: auto !important;
 }
 
 #changelist {
 padding: 10px; width: auto;
 }
 
-#changelist #toolbar{
+#changelist #toolbar{ 
 padding: 0;
 background: none no-repeat 0 0 transparent;
 border: none;
@@ -73,8 +71,8 @@ border: none;
 
 /* --- change list search ---- */
 
-#changelist #toolbar #changelist-search{
--moz-border-radius: 8px;
+#changelist #toolbar #changelist-search{ 
+-moz-border-radius: 8px 8px 8px 8px;
 padding: 8px 12px 8px 8px;
 background: none no-repeat 0 0 white;
 display: inline-block;
@@ -84,8 +82,12 @@ margin-bottom: 15px;
 
 #changelist .actions {
  background: url('../images/actions.png') no-repeat 12px 10px #C3D5F0;
-padding-left: 35px;
-color: #555;
+ padding: 8px 12px 8px 35px;
+ color: #555;
+ -moz-border-radius: 8px 8px 8px 8px;
+ border: none;
+ margin-bottom: 15px;
+
 }
 
 /* ---- change list top links ---- */
@@ -94,13 +96,13 @@ color: #555;
  margin-bottom: 12px;
 }
 
-#changelist ul.toplinks{
+#changelist ul.toplinks{ 
 background: none no-repeat 0 0 transparent;
 /* border-bottom: 2px solid #C3D5F0 !important; */
 border: none !important;
 }
 
-#changelist ul.toplinks li{
+#changelist ul.toplinks li{ 
 padding:2px 6px;
 width: auto;
 border: 1px solid #C3D5F0;
@@ -223,16 +225,13 @@ background: url('../images/filter-on.png') no-repeat 0 0 transparent;
 
 /* --- change list paginator ---- */
 
-#changelist .actions, #changelist p.paginator {
--moz-border-radius: 8px;
-background: none no-repeat 0 0 #C3D5F0;
-border: none;
-padding: 8px 12px;
-margin-bottom: 15px;
-}
-
 #changelist p.paginator {
+background: none no-repeat 0 0 #C3D5F0;
+padding: 8px 12px;
 text-align: center;
+border: none;
+-moz-border-radius: 8px 8px 8px 8px;
+margin-bottom: 15px;
 }
 
 /* --- change list forms --- */
@@ -242,16 +241,20 @@ select {
 background-color:#FFFFFF;
 border:1px solid #83a9de;
 font:12px/20px 'Liberation Sans', Arial, sans-serif;
-/*height:2em;*/
+ /* height:2em; WTF!?*/
 padding:4px;
 vertical-align:top;
+}
+
+select option{
+padding: 3px;
 }
 
 .button, input[type="submit"], input[type="button"], .submit-row input {
 background: none no-repeat 0 0 white;
 border: 2px solid #C3D5F0;
 color:black;
--moz-border-radius: 5px;
+-moz-border-radius: 5px 5px 5px 5px;
 padding:2px 4px;
 margin-left: 3px;
 }
@@ -267,24 +270,32 @@ border: 1px solid #C3D5F0;
 
 /* ------- object tool button (top-right)------- */
 
-.object-tools{
- font-family: 'Liberation Sans', Arial, Helvetica, sans-serif;
- margin: -53px 0 0 0; padding: 0;
+#content-main ul.object-tools a:link,
+#content-main ul.object-tools a:visited{
+ background: none no-repeat 0 0 transparent;
+ color:#008000;
 }
 
-.object-tools li {
+
+
+#content-main ul.object-tools{
+ font-family: 'Liberation Sans', Arial, Helvetica, sans-serif;
+ margin: -53px 0 0 0 !important; padding: 0 !important;
+}
+
+#content-main ul.object-tools li {
  background: none no-repeat 0 0 transparent;
  padding: 10px 10px;
  border: 2px solid #008000;
  background: none no-repeat 0 0 #cfeecf;
- -moz-border-radius: 8px;
+ -moz-border-radius: 8px 8px 8px 8px;
 }
 
-.object-tools li:hover {
+#content-main ul.object-tools li:hover{
   background: none no-repeat 0 0 #008000;
 }
 
-.object-tools li a {
+#content-main ul.object-tools li a {
  font-size: 14px;
  line-height: 18px
  float: none; display: inline;
@@ -292,14 +303,22 @@ border: 1px solid #C3D5F0;
  height: auto;
 }
 
-.object-tools a.addlink{
+#content-main ul.object-tools a.addlink{
   float: none; display: inline;
   padding: 0px 0 0 23px; margin: 0;
   background: url('../images/add-small.png') no-repeat 0 0px transparent;
   color: #008000;
 }
 
-.object-tools li:hover a, .object-tools a.addlink:hover, .object-tools a:hover{
+#content-main ul.object-tools a.historylink{
+  float: none; display: inline;
+  padding: 1px 0 2px 25px; /* TODO corregir el png! */
+  margin: 0;
+  background: url('../images/history-small.png') no-repeat 0 0px transparent;
+  color: #008000;
+}
+
+#content-main ul.object-tools li:hover a, #content-main ul.object-tools a.addlink:hover, #content-main ul.object-tools a:hover{
   background: url('../images/add-small.png') no-repeat 0 0px #008000;
   color: white;
 }
@@ -318,32 +337,32 @@ font-size: 14px;
 
 /* --- change list titles --- */
 
-.change-list #content h1, .change-form #content h1 {
+.change-list #content h1, .change-form #content h1 { 
 }
 
-.change-list #content h2, .change-form #content h2 {
+.change-list #content h2, .change-form #content h2 { 
 font-size: 14px;
 padding: 7px 12px;
 -moz-border-radius: 0px 5px 0px 0px;
 }
 
-.change-list #content h3, .change-form #content h3 {
+.change-list #content h3, .change-form #content h3 { 
 }
 
-.change-list .module, .change-list .filtered {
+.change-list .module, .change-list .filtered { 
 display: block;
--moz-border-radius: 12px;
+-moz-border-radius: 12px 12px 12px 12px;
 border: 2px solid #c3d5f0;
 background: none !important;
 background-color: #e8eff9 !important;
 }
 
-/* ===== dashboard ===== */
+/* ################## dashboard ################## */
 
 /* ===== default module ===== */
 
 .dashboard-module {
--moz-border-radius: none;
+-moz-border-radius: 0px 0px 0px 0px;
 border: none;
 margin: 0;
 padding: 0;
@@ -369,16 +388,16 @@ border: none;
 padding-top: 12px;
 }
 
-.dashboard-module-content > ul > li {
+.dashboard-module-content > ul > li { 
 display: block;
-height: 67px;
+height: 67px; 
 margin: 0 0 13px 0;
 -moz-border-radius: 6px 6px 6px 6px;
-border: 2px solid #c3d5f0;
-background-color: #e8eff9;
+border: 2px solid #ddd; /* celeste borde c3d5f0; */
+background-color: #efefef; /* celeste #e8eff9; */
 }
 
-.dashboard-module-content > ul > li:hover {
+.dashboard-module-content > ul > li:hover { 
 background-color: #fff;
 }
 
@@ -403,20 +422,18 @@ color: #2B5EA9;
 
 /* =========== main area dashboard ========= */
 
-.dashboard-container {
+.dashboard-container { 
 width: 960px; padding: 0px;
 }
 
-.main-area-modules {
+.main-area-modules { 
 width: 645px;
 float: left;
 margin-top: 20px;
 }
 
-
-
 .main-area-modules  h2 {
-background: url("../images/estrella.png") no-repeat scroll 8px 7px #2b5ea9;
+background: url("../images/estrella.png") no-repeat scroll 8px 7px #aaa; /* #2b5ea9; (azul-celeste)*/
 padding-left: 30px;
 width: 584px;
 font-weight: bold;
@@ -430,7 +447,7 @@ text-align: right;
 margin: -38px 38px 21px 0px;
 }
 
-.main-area-modules .dashboard-module-content > ul > li {
+.main-area-modules .dashboard-module-content > ul > li { 
 display: inline-block;
 width: 280px;
 margin: 0 19px 13px 0;
@@ -439,10 +456,10 @@ margin: 0 19px 13px 0;
 
 /* ========== right-area ========= */
 
-.right-area-modules {
+.right-area-modules { 
 width: 300px;
 margin-left: 650px;
--moz-border-radius: 0;
+-moz-border-radius: 0px 0px 0px 0px;
 margin-top: 20px;
 /* display: none; */
 }
@@ -458,7 +475,7 @@ margin-right: 6px;
 padding-top: 0;
 }
 .right-area-modules .dashboard-module-content > ul > li {
--moz-border-radius: 0;
+-moz-border-radius: 0px 0px 0px 0px;
 background: none no-repeat 0 0 transparent;
 border: none;
 border-top: 1px solid #efdede;
@@ -470,8 +487,8 @@ margin: 0;
 
 .right-area-modules .dashboard-module-content > ul > li.odd {
 background: none no-repeat 0 0 transparent;
--moz-border-radius: 0;
-}
+-moz-border-radius: 0px 0px 0px 0px;
+} 
 
 .right-area-modules .dashboard-module-content > ul > li > a {
 display: block;
@@ -485,20 +502,29 @@ height: auto;
 
 .right-area-modules {
 border: 2px solid #800000;
--moz-border-radius: 6px;
+-moz-border-radius: 6px 6px 6px 6px;
 }
 
 .right-area-modules h2 {
-background: url("../images/acciones_recientes.png") no-repeat scroll 8px 7px #800000;
--moz-border-radius: 3px 3px 0 0;
+background: url("../images/right-area-default-icon.png") no-repeat scroll 8px 7px #800000;
+-moz-border-radius: 3px 3px 0px 0px;
 }
 
 /* --- feeds --- */
+
+.dbmodule-recent-actions h2 {
+background: url('../images/feed-small.png') no-repeat 8px 7px #800000;
+}
 
 .dbmodule-feed ul li a.external-link {
 background: url('../images/codigo_sur-ext-link.png') no-repeat 0 5px transparent;
 }
 
+/* --- history --- */
+
+.dbmodule-recent-actions h2 {
+background: url('../images/history-small.png') no-repeat 8px 7px #800000;
+}
 
 
 /* ====== iconos ======== */
@@ -593,3 +619,28 @@ background: url("../images/admin-collections-category.png") no-repeat scroll -2p
 .dashboard-module-content > ul > li > a[href="/admin/cyclope/sitesettings/"] {
 background: url("../images/admin-cyclope-sitesettings.png") no-repeat scroll 0 2px transparent;
 }
+
+.dashboard-module-content > ul > li > a[href="/admin/tagging/taggeditem/"] {
+background: url("../images/admin-tagging-taggeditem.png") no-repeat scroll 0 2px transparent;
+}
+
+.dashboard-module-content > ul > li > a[href="/admin/tagging/tag/"] {
+background: url("../images/admin-tagging-tag.png") no-repeat scroll 0 2px transparent;
+}
+
+
+
+
+.dashboard-module-content > ul > li > a[href="/admin/contact_form/contactformsettings/"] {
+background: url("../images/admin-contact_form-contactformsettings.png") no-repeat scroll 0 2px transparent;
+}
+
+/* ####### !! ####### */
+html[lang="es-ar"] .dashboard-module-content > ul > li > a[href="/admin/contact_form/contactformsettings/"] {
+background: url("../images/admin-contact_form-contactformsettings.png") no-repeat scroll 0 2px transparent;
+/* texto demasiado largo de contact:_form !! */
+margin:9px 0 11px 11px;
+font-size: 14px;
+line-height: 16px;
+}
+/* ####### !! ####### */
