--- a/cyclope/templates/cyclope/themes/neutrona/base.html
+++ b/cyclope/templates/cyclope/themes/neutrona/base.html
@@ -72,8 +72,11 @@ Si modificas no borres estas lineas :)
           {% region 'left_sidebar' %}
 
           <div id="searchbox">
-            <form action="/search" method="post">
-              <input type="text" name="consulta"/>
+              <form action="/search/" method="get">
+             {% for model in CYCLOPE_BASE_CONTENT_TYPES %}
+             <input type="hidden" name="models" value="{{model.get_app_label}}.{{model.get_object_name}}">
+             {% endfor %} 
+              <input type="text" name="q"/>
               <input type="submit" value="" class="submit"/>
             </form>
           </div>
