--- a/cyclope/templates/admin/change_list.html
+++ b/cyclope/templates/admin/change_list.html
@@ -1,5 +1,5 @@
 {% extends "admin/base_site.html" %}
-{% load adminmedia admin_list i18n %}
+{% load adminmedia admin_list i18n cyclope_utils %}
 
 {% block extrastyle %}
   {{ block.super }}
