Added pagination to category_teaser_list View

--- a/cyclope/core/collections/templates/collections/category_teaser_list.html
+++ b/cyclope/core/collections/templates/collections/category_teaser_list.html
@@ -26,7 +26,8 @@
   {% endfor %}
 
 <!--  <div class="pagEspacio"></div> -->
-
-<!-- {include file="paginador.html" } -->
+  {% if page %}
+    {% include 'cyclope/pagination_block.html' %}
+  {% endif %}
 
 {% endblock %}
