--- a/cyclope/apps/medialibrary/templates/medialibrary/media_detail_header.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/media_detail_header.html
@@ -1,9 +1,11 @@
 {% load i18n comments %}
 
+  {% include 'collections/categories_navigation_block.html' %}
+
   {% if media.tags %}
   <span class="tags">{% trans "Tags" %}: {{ media.tags }}</span>
   {% endif %}
-  
+
   <h1 class="title">{{ current_object.name }}</h1>
 
   <!-- herramientas -->
