--- a/cyclope/templates/cyclope/pagination_block.html
+++ b/cyclope/templates/cyclope/pagination_block.html
@@ -4,7 +4,8 @@
     <div class="pagination">
         <span class="step-links">
             {% if page.has_previous %}
-                <a href="?page={{ page.previous_page_number }}">{% trans 'previous' %}</a>
+                {# query is present when this block is included in the search view #}
+                <a href="?{% if query %}q={{ query }}&amp;{% endif %}page={{ page.previous_page_number }}">{% trans 'previous' %}</a>
             {% endif %}
 
             <span class="current">
@@ -12,7 +13,7 @@
             </span>
 
             {% if page.has_next %}
-                <a href="?page={{ page.next_page_number }}">{% trans 'next' %}</a>
+                <a href="?{% if query %}q={{ query }}&amp;{% endif %}page={{ page.next_page_number }}">{% trans 'next' %}</a>
             {% endif %}
         </span>
     </div>
