--- a/cyclope/templates/search/search.html
+++ b/cyclope/templates/search/search.html
@@ -25,13 +25,8 @@
                 <p>{% trans "No results found." %}</p>
             {% endfor %}
 
-            {% if page.has_previous or page.has_next %}
-                <div>
-                    {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
-                    |
-                    {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
-                </div>
-            {% endif %}
+            {% include 'cyclope/pagination_block.html' %}
+
         </div>
     {% else %}
         {# TODO(diegoM): Show advanced search div #}
