--- a/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_labeled_icon.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_labeled_icon.html
@@ -1,12 +1,12 @@
 {% load fb_versions %}
 
-  <div class="media teaser externalcontent">
+  <div class="media labeled_icon externalcontent">
       <a href="{% if externalcontent.skip_detail %}{{ externalcontent.content_url }}{% else %} {% url externalcontent-detail externalcontent.slug %}{% endif%}" {% if externalcontent.new_window %}target="_blank"{% endif%}>
       {% if externalcontent.image %}
-      <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/external.png" width="48px" border="0"/>
-      <img src="{% version externalcontent.image.path 'thumbnail' %}" width="135" border="0"/>
+      <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/external.png"/>
+      <img src="{% version externalcontent.image.path 'thumbnail' %}"/>
       {% else %}
-      <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/external.png" width="135" border="0"/>
+      <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/external.png"/>
       {% endif %}
 
     </a>
