Added missing templates and modified some wrong css classes

--- a/cyclope/apps/medialibrary/templates/medialibrary/regularfile_labeled_icon.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/regularfile_labeled_icon.html
@@ -1,6 +1,6 @@
 {% load fb_versions cyclope_utils %}
 
-  <div class="media labeled_icon movieclip">
+  <div class="media labeled_icon regularfile">
     <a href="{% url regularfile-detail regularfile.slug %}">
       {% if regularfile.image %}
       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/regularfile.png"/>
