--- a/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_detail.html
@@ -6,7 +6,7 @@
 
 {% alias media as 'current_object' %}
 
-<div class="movieclip media detail">
+<div class="flashmovie media detail">
 
   {% include 'medialibrary/media_detail_header.html' %}
 
